        - Fix updating multiple CLOB/BLOB columns on Oracle
        - Fix exception on complex update/delete under a replicated setup
          http://lists.scsys.co.uk/pipermail/dbix-class/2015-January/011903.html
        - Fix incorrect collapsing-parser source being generated in the
          presence of unicode data among the collapse-points
        - Fix endless loop on BareSourcelessResultClass->throw_exception(...)
        - Fix hang in t/72pg.t when run against DBD::Pg 3.5.0. The ping()
          implementation changes due to RT#100648 made an alarm() based
          timeout lock-prone.
        - Fix failures of t/54taint.t on Windows with spaces in the $^X
          executable path (RT#101615)

    * Misc
        - Remove warning about potential side effects of RT#79576 (scheduled)
        - Skip tests in a way more intelligent and speedy manner when optional
          dependencies are missing
        - Make the Optional::Dependencies error messages cpanm-friendly
        - Incompatibly change values (not keys) of the hash returned by
          Optional::Dependencies::req_group_list (no known users in the wild)
        - Depend on newer SQL::Abstract (fixing overly-aggressive parenthesis
          opener: RT#99503)
        - Depend on newer Moo, fixing some interoperability issues: RT#93004 and
          http://lists.scsys.co.uk/pipermail/dbix-class/2014-October/011787.html
        - Fix intermittent failures in the LeakTracer on 5.18+

0.082801 2014-10-05 23:55 (UTC)
    * Known Issues
        - Passing large amounts of objects with stringification overload
          directly to DBIx::Class may result in strange action at a distance
          exceptions. More info (and a workaround description) can be found
          under "Note" at https://metacpan.org/pod/SQL::Abstract#is_plain_value
        - The relationship condition resolution fixes come with the side effect
          of returning more complete data, tripping up *some* users of an