@@ -16,6 +16,9 @@ Revision history for DBIx::Class
           http://lists.scsys.co.uk/pipermail/dbix-class/2015-January/011903.html
         - Fix incorrect collapsing-parser source being generated in the
           presence of unicode data among the collapse-points
+        - Fix uninitialized warnings on empty hashes passed to join/prefetch
+          https://github.com/vanstyn/RapidApp/commit/6f41f6e48 and
+          http://lists.scsys.co.uk/pipermail/dbix-class/2015-February/011921.html
         - Fix endless loop on BareSourcelessResultClass->throw_exception(...)
         - Fix hang in t/72pg.t when run against DBD::Pg 3.5.0. The ping()
           implementation changes due to RT#100648 made an alarm() based
